@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.4-0
-Date: 2021-11-22
+Date: 2021-12-01
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
